--- a/package.json
+++ b/package.json
@@ -6,22 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "prisma generate --schema=./src/prisma/schema.prisma",
+    "docker:down": "docker-compose down",
+    "docker:up": "docker-compose up -d"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "@apollo/server-plugin-response-cache": "^4.1.3",
+    "@as-integrations/next": "^3.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.10.2",
+    "@types/graphql-fields": "^1.3.9",
+    "graphql": "16.7.1",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.22.5",
+    "next": "14.1.2",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.2"
+    "reflect-metadata": "^0.2.1",
+    "tslib": "^2.6.2",
+    "type-graphql": "2.0.0-beta.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.2"
+    "eslint-config-next": "14.1.2",
+    "postcss": "^8",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.0",
+    "typegraphql-prisma": "^0.27.2",
+    "typescript": "^5"
   }
 }
