--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "^5.1.1",
     "next": "14.1.2",
     "next-auth": "^4.24.6",
     "react": "^18",
