--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@pothos/core": "^3.41.0",
+    "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
