--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.2.10",
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
+    "framer-motion": "^11.0.8",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
     "next": "14.1.2",
     "next-auth": "^4.24.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
