--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
+    "@urql/next": "^1.1.1",
     "framer-motion": "^11.0.8",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
@@ -25,7 +26,8 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "urql": "^4.0.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
