--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.10.2",
     "@urql/next": "^1.1.1",
     "framer-motion": "^11.0.8",
+    "gql.tada": "^1.3.1",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
     "next": "14.1.2",
@@ -30,6 +31,7 @@
     "urql": "^4.0.6"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
