--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gql.tada": "^1.3.1",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
+    "nanoid": "^5.0.6",
     "next": "14.1.2",
     "next-auth": "^4.24.6",
     "react": "^18",
