--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@urql/next": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "gql.tada": "^1.3.1",
     "graphql": "^16.8.1",
@@ -29,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "urql": "^4.0.6"
   },
   "devDependencies": {
