--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nanoid": "^5.0.6",
     "next": "14.1.2",
     "next-auth": "^4.24.6",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
