--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "docker:up": "docker-compose up -d"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@urql/next": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -26,16 +28,21 @@
     "framer-motion": "^11.0.8",
     "gql.tada": "^1.3.1",
     "graphql": "^16.8.1",
+    "graphql-scalars": "^1.22.5",
     "graphql-yoga": "^5.1.1",
     "nanoid": "^5.0.6",
     "next": "14.1.2",
     "next-auth": "^4.24.6",
+    "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "urql": "^4.0.6"
+    "urql": "^4.0.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.4.2",
