--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@urql/exchange-graphcache": "^6.5.0",
     "@urql/next": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "gql.tada": "^1.3.1",
     "graphql": "^16.8.1",
