--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@urql/exchange-graphcache": "^6.5.0",
     "@urql/next": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -40,8 +42,10 @@
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "recharts": "^2.12.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
