--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@uploadthing/react": "^6.3.4",
     "@urql/exchange-graphcache": "^6.5.0",
     "@urql/next": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -58,6 +59,7 @@
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.5.2",
     "urql": "^4.0.6",
     "zod": "^3.22.4"
   },
