--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
-    "@pothos/core": "^3.41.0",
-    "@pothos/plugin-prisma": "^3.65.0",
-    "@prisma/client": "^5.10.2",
+    "@pothos/core": "^3.41.1",
+    "@pothos/plugin-prisma": "^3.65.1",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -33,19 +33,18 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@uploadthing/react": "^6.3.4",
-    "@urql/exchange-graphcache": "^6.5.0",
+    "@urql/exchange-graphcache": "^7.0.1",
     "@urql/next": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
-    "framer-motion": "^11.0.8",
-    "gql.tada": "^1.3.1",
+    "gql.tada": "^1.5.6",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.5",
-    "graphql-yoga": "^5.1.1",
+    "graphql-yoga": "^5.3.0",
     "nanoid": "^5.0.6",
-    "next": "14.1.2",
+    "next": "^14.2.2",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
@@ -57,12 +56,12 @@
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.5.2",
-    "urql": "^4.0.6",
+    "uploadthing": "^6.9.0",
+    "urql": "^4.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.4.2",
+    "@0no-co/graphqlsp": "^1.11.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -71,7 +70,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
-    "prisma": "^5.10.2",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
