--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nextui-org/react": "^2.2.10",
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -42,12 +42,12 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
-    "gql.tada": "^1.3.1",
+    "gql.tada": "^1.5.6",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.5",
     "graphql-yoga": "^5.1.1",
     "nanoid": "^5.0.6",
-    "next": "14.1.2",
+    "next": "^14.2.2",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
@@ -64,7 +64,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.4.2",
+    "@0no-co/graphqlsp": "^1.11.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -73,7 +73,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
-    "prisma": "^5.10.2",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
