--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@libsql/client": "^0.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
+    "@prisma/adapter-libsql": "^5.12.1",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
